[package]
name = "rhino-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "4.0.23"
data-encoding = "2.3.2"
num-bigint = "0.4.3"
rustc-serialize = "0.3.24"
serde = "1.0.147"
sled = "0.34.7"
structopt = "0.3.26"
time = "0.3.17"
uuid = "1.2.1"
